[package]
name = "goto"
version = "2.0.0"
edition = "2018"
default-run = "goto-api"

[dependencies]
actix-files = "0.5.0"
actix-web = "3"
blake3 = "0.3.7"
futures = "0.3"
hyper = "0.14"
structopt = "0.3.21"
serde_yaml = "0.8.17"
url = "2.2.2"

[dev-dependencies]
actix-rt = "2.2.0"

[[bin]]
name = "goto-api"
path = "src/main.rs"

[[bin]]
name = "goto"
path = "src/cli/main.rs"
