[package]
name = "goto"
version = "2.0.0"
edition = "2018"
default-run = "goto-api"

[dependencies]
actix-files = "0.5"
actix-web = "3"
async-trait = "0.1"
blake3 = "0.3"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
serde_yaml = "0.8"
url = "2.2"

[dev-dependencies]
actix-rt = "2.2"

[[bin]]
name = "goto-api"
path = "src/main.rs"

[[bin]]
name = "goto"
path = "src/cli/main.rs"
