[package]
name = "goto"
version = "2.0.0"
edition = "2018"
default-run = "goto-api"
repository = "https://github.com/tsauvajon/goto"
keywords = ["url-shortener"]
categories = ["command-line-utilities"]
license = "MIT"
description = "URL shortener with an API, a CLI and a Frontend"

[dependencies]
actix-files = "0.6"
actix-web = "4.11"
async-trait = "0.1"
blake3 = "0.3"
futures = "0.3"
home = "0.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
url = "2.2"
webbrowser = "0.8.3"

[dev-dependencies]
actix-rt = "2.2"
httpmock = "0.7"

[[bin]]
name = "goto-api"
path = "src/main.rs"

[[bin]]
name = "goto"
path = "src/cli/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
